# my-llm-engineering-course

./: pyproject.toml
week5/: day3.ipynb
